--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,26 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <jakartaee>8.0</jakartaee>
+        <maven-surefire-plugin.version>3.0.0-MS</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-MS</maven-failsafe-plugin.version>
         <jacoco.version>0.8.5</jacoco.version>
         <mockito-core.version>3.1.0</mockito-core.version>
+        <arquillian-bom.version>1.7.0.Alpha10</arquillian-bom.version>
+        <payara.version>5.2022.1</payara.version>
+        <arquillian-payara.version>2.4.6</arquillian-payara.version>
     </properties>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>${arquillian-bom.version}</version>
+                <scope>import</scope>    
+                <type>pom</type>
+            </dependency>
+        </dependencies>    
+    </dependencyManagement>
     
     <dependencies>
         <dependency>
@@ -84,7 +101,35 @@
             <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.junit5</groupId>
+            <artifactId>arquillian-junit5-container</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+    
+    <profiles>
+        <profile>
+            <id>arquillian-payara</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>fish.payara.extras</groupId>
+                    <artifactId>payara-embedded-all</artifactId>
+                    <version>${payara.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>fish.payara.arquillian</groupId>
+                    <artifactId>arquillian-payara-server-embedded</artifactId>
+                    <version>${arquillian-payara.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     
     <build>
         <plugins>
