--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
         <jakartaee>8.0.0</jakartaee>
         <mockito-core-version>3.1.0</mockito-core-version>
         <jacoco.version>0.8.5</jacoco.version>
-        <maven-surefire-plugin.version>3.0.0-M1</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.0.0-M1</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M2</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M2</maven-failsafe-plugin.version>
         <arquillian-bom.version>1.7.0.Alpha10</arquillian-bom.version>
-        <payara.version>5.2022.1</payara.version>
+        <payara.version>5.2021.1</payara.version>
         <arquillian-payara.version>2.4.6</arquillian-payara.version>
     </properties>
     
@@ -75,6 +75,19 @@
             <groupId>org.jboss.arquillian.junit5</groupId>
              <artifactId>arquillian-junit5-container</artifactId>
              <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>fish.payara.extras</groupId>
+            <artifactId>payara-embedded-all</artifactId>
+            <version>${payara.version}</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     
