--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <arquillian-payara.version>2.4.6</arquillian-payara.version>
     </properties>
     
-        <dependencyManagement>
+    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
@@ -34,7 +34,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+       
     <dependencies>
         <dependency>
             <groupId>jakarta.platform</groupId>
@@ -73,8 +73,8 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit5</groupId>
-             <artifactId>arquillian-junit5-container</artifactId>
-             <scope>test</scope>
+            <artifactId>arquillian-junit5-container</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>fish.payara.extras</groupId>
@@ -113,6 +113,14 @@
             </dependencies>
         </profile>
     </profiles>
+    
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Github dg17001 Apache Maven Packages</name>
+            <url>https://github.com/DG17001/baches.git</url>
+        </repository>
+    </distributionManagement>
     
     <build>
         <plugins>
@@ -188,7 +196,6 @@
                     </execution>
                 </executions>
             </plugin>
-            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
