--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Baches-1.1-SNAPSHOT</name>
-    
+    <!--Probando Jenkins-->
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
